fixed text alignments

--- a/app/projects/ar-story-teller/components/ProjectHeader.scss
+++ b/app/projects/ar-story-teller/components/ProjectHeader.scss
@@ -126,17 +126,17 @@
 
             .banner-text-title {
                 margin-bottom: 1.5rem;
-                font-size: clamp(1.875rem, 1.2vw + 1.15rem, 2.1rem);
+                font-size: clamp(1.875rem, 1.2vw + 1.15rem, 2.5rem);
                 font-family: var(--font-satoshi), sans-serif;
                 color: #ffffff;
                 font-weight: 600;
             }
             p {
-                font-size: clamp(1.25rem, 1.05vw + 0.94rem, 1.4rem);
+                font-size: clamp(1.25rem, 1.05vw + 0.54rem, 1.5rem);
                 font-family: var(--font-satoshi), sans-serif;
                 color: #ffbb00;
                 font-weight: 600;
-                width: 55%;
+                width: 670px;
             }
         }
 
@@ -160,7 +160,7 @@
     }
 
     .storyteller-banner {
-        --banner-titles-overlay-top: -90%;
+        --banner-titles-overlay-top: -40%;
 
         .banner-titles {
             top: var(--banner-titles-overlay-top);
@@ -185,7 +185,7 @@
                 font-family: var(--font-satoshi), sans-serif;
                 color: #ffbb00;
                 font-weight: 500;
-                width: 80%;
+                width: 500px;
             }
         }
 
@@ -207,7 +207,7 @@
     }
 
     .storyteller-banner {
-        --banner-titles-overlay-top: -40%;
+        --banner-titles-overlay-top: -35%;
 
         .people-in-line {
             width: 100%;
@@ -215,7 +215,7 @@
             display: flex;
             align-content: center;
             justify-content: center;
-            padding-top: 5%;
+            //padding-top: 1%;
         }
 
         .banner-titles {
@@ -229,9 +229,15 @@
             padding-left: 2%;
             padding-right: 2%;
 
+            .banner-titles__inner {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+
             .banner-text-title {
                 margin-bottom: 1.5rem;
-                font-size: 1.2rem;
+                font-size: 1.7rem;
                 font-family: var(--font-satoshi), sans-serif;
                 color: #ffffff;
                 font-weight: 600;
@@ -239,11 +245,13 @@
                 text-align: center;
             }
             p {
-                font-size: 1rem;
+                font-size: 1.4rem;
                 font-family: var(--font-satoshi), sans-serif;
                 color: #ffbb00;
                 font-weight: 500;
-                width: 100%;
+                width: 80%;
+                max-width: 100%;
+                margin-inline: auto;
                 text-align: center;
             }
         }
